# person_api

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  renanklein_github  renanklein_github.pub
migrations/2023-07-26-115241_create_person/: down.sql  up.sql
migrations/2023-07-26-115322_create_address/: up.sql
migrations/2023-07-26-115327_create_document/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  repository.rs  schema.rs
